commit by teja